# homelab-k8s

./: .gitignore  .gitmodules  Projects.md  README.md  foo.yaml  out.yaml
.github/workflows/: build-apps.yaml  build-chart.yaml  build-docker.yaml  fe-blog-build.yaml
application_source/fe-blog/: Dockerfile  hugo.yaml
application_source/fe-blog/helm/: Chart.yaml  values.yaml
application_source/python-otel-example/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
application_source/python-otel-example/db/: __init__.py  config.py  repository.py
application_source/quarkus-otel/: .dockerignore  README.md  build.gradle  gradle.properties  settings.gradle
apps/: appset.yaml  cert-manager.yaml  external-dns.yaml  fe-blog.yaml  jellyfin.yaml  kube-state-metrics.yaml  loki.yaml  longhorn.yaml  metal-lb.yaml  nginx-ingress-external.yaml  nginx-ingress-internal.yaml  nginx-ingress.yaml  nginx.yaml  opentelemetry-collector.yaml  pihole.yaml  plex-migration.yaml  plex.yaml  prometheus-stack.yaml  tempo.yaml  test-app.yaml
cd-apps/test-app/: config.yaml  values.yaml
helm/argo-cd/: values.yaml
helm/cert-manager/templates/: __cluster-issuer.yaml  a_cluster-issuer.yaml
helm/external-dns/: Chart.yaml  values.yaml
helm/external-dns-pihole/: Chart.yaml  values.yaml
helm/external-dns-pihole/templates/: deployment.yaml  secret.yaml
helm/external-dns/templates/: crb.yaml  deployment-cloudflare.yaml  secret-cloudflare.yaml
helm/jellyfin-transmission-media-server/: Chart.yaml  values.yaml
helm/jellyfin-transmission-media-server/templates/: jellyfin-deployment.yaml  jellyfin-ingress.yaml  jellyfin-service.yaml  pvc.yaml  secrets.yaml  transmission-deployment.yaml  transmission-ingress.yaml  transmission-service.yaml
helm/kube-prometheus-stack/: Chart.yaml  values.yaml
helm/longhorn/: Chart.yaml  values.yaml
helm/metallb/templates/: ip_pool.yaml
helm/opentelemetry-collector/: Chart.yaml
helm/plex-media-server/: Chart.yaml  values.yaml
helm/plex-media-server/templates/: ingress.yaml  service.yaml  statefulset.yaml
helm/sync-app/: values.yaml
helm/sync-app/templates/: app.yaml
helm/test-app/: Chart.yaml
helm/test-app/templates/: deployment.yaml  ingress.yaml  service.yaml
init/: README.md  init.sh  k3s-init.sh
init/terraform/: main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variable.tf  variables.tf
init/terraform/values/: 7.7.11.yaml  (+2 more)
(+19 files in other folders)
